# error-align

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .templatesyncignore  README.md  pyproject.toml
.github/workflows/: lint.yml  template_sync.yml  tests-and-coverage.yml  tests_and_coverage.yml
evaluation/: evaluate_dataset.py  monolingual_eval.sh  multilingual_eval.sh  prepare_primock57.py  transcribe_dataset.py  utils.py
src/error_align/: __init__.py  backtrace_graph.py  edit_distance.py  error_align.py  error_align__backup.py  func.py  optimal_alignment_graph.py  optimal_word_alignment.py  utils.py
src/error_align/baselines/: __init__.py  optimal_word_alignment.py  power_alignment.py  rapidfuzz_word_alignment.py  utils.py
src/error_align/baselines/power/normalize/: __init__.py  normalize.py
src/error_align/baselines/power/power/: __init__.py  aligner.py  levenshtein.py  pronounce.py  punct.py  readers.py  writers.py
tests/: test_default.py
